finish scheme concept

--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -1,8 +1,8 @@
-.services{
+.contact{
     background-color: #EFF1FF;
 }
 
-.services__title {
+.contact__title {
     font-size: 36px;
     line-height: 2;
     font-weight: 600;
