--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,8 +1,4 @@
-.services{
-    background-color: #EFF1FF;
-}
-
-.services__title {
+.portfolio__title {
     font-size: 36px;
     line-height: 2;
     font-weight: 600;
