--- a/css/main.css
+++ b/css/main.css
@@ -233,9 +233,22 @@ h1, h2, h3 {
 
 .about__title {
   font-size: 36px;
+  line-height: 2;
   font-weight: 600;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
+  position: relative;
+}
+.about__title::after {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
   display: block;
+  width: 50px;
+  height: 5px;
+  background-color: #1028C9;
 }
 
 .about__paragraph {
@@ -246,4 +259,153 @@ h1, h2, h3 {
 
 .services {
   background-color: #EFF1FF;
+}
+
+.services__title {
+  font-size: 36px;
+  line-height: 2;
+  font-weight: 600;
+  margin-bottom: 30px;
+  position: relative;
+}
+.services__title::after {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  display: block;
+  width: 50px;
+  height: 5px;
+  background-color: #1028C9;
+}
+
+.specialist {
+  background-color: #1028C9;
+  color: white;
+}
+
+.specialist__section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.specialist__wrapper {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.specialist__text {
+  font-size: 48px;
+  font-weight: 800;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.specialist__button {
+  width: 300px;
+  height: 70px;
+  background-color: transparent;
+  border: 4px solid white;
+  font-size: 24px;
+  color: white;
+  font-weight: 800;
+  text-transform: uppercase;
+}
+.specialist__button:hover, .specialist__button:focus {
+  background-color: white;
+  color: #1028C9;
+}
+
+.portfolio__title {
+  font-size: 36px;
+  line-height: 2;
+  font-weight: 600;
+  margin-bottom: 30px;
+  position: relative;
+}
+.portfolio__title::after {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  display: block;
+  width: 50px;
+  height: 5px;
+  background-color: #1028C9;
+}
+
+.contact {
+  background-color: #EFF1FF;
+}
+
+.contact__title {
+  font-size: 36px;
+  line-height: 2;
+  font-weight: 600;
+  margin-bottom: 30px;
+  position: relative;
+}
+.contact__title::after {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  display: block;
+  width: 50px;
+  height: 5px;
+  background-color: #1028C9;
+}
+
+.footer {
+  background-color: #1028C9;
+  color: white;
+}
+
+.footer__section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-weight: 600;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
+}
+
+.footer__text {
+  text-align: center;
 }/*# sourceMappingURL=main.css.map */
