--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -65,9 +65,22 @@
 
 .about__title{
     font-size: 36px;
+    line-height: 2;
     font-weight: 600;
-    margin-bottom: 20px;
-    display: block;
+    margin-bottom: 30px;
+    position: relative;
+
+    &::after{
+        content: "";
+        position: absolute;
+        bottom: 0px;
+        left: 50%;
+        transform: translateX(-50%);
+        display: block;
+        width: 50px;
+        height: 5px;
+        background-color: #1028C9;
+    }
 }
 
 .about__paragraph{
