--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,3 +5,7 @@
 @use './components/slider';
 @use './components/about';
 @use './components/services';
+@use './components/specialist';
+@use './components/portfolio';
+@use './components/contact';
+@use './components/footer';
