--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,11 @@ h1, h2, h3 {
   display: none;
 }
 
+.fadeout {
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+}
+
 .container {
   max-width: 1200px;
   margin: auto;
@@ -48,9 +53,17 @@ h1, h2, h3 {
   width: 100%;
   padding: 15px 30px;
   position: absolute;
+  background-color: transparent;
   top: 0;
   left: 0;
   z-index: 10;
+  -webkit-transition: background-color 500ms linear;
+  transition: background-color 500ms linear;
+}
+
+.header--sticky {
+  position: fixed;
+  background-color: #006bb3;
 }
 
 .header__container {
@@ -68,7 +81,7 @@ h1, h2, h3 {
   fill: white;
 }
 .logo__icon:hover, .logo__icon:focus {
-  fill: #283FFC;
+  fill: #33adff;
 }
 
 .navigation__list {
@@ -93,7 +106,7 @@ h1, h2, h3 {
   letter-spacing: 0.2;
 }
 .navigation__link:hover, .navigation__link:focus {
-  color: #283FFC;
+  color: #33adff;
 }
 
 .slider {
@@ -105,9 +118,13 @@ h1, h2, h3 {
 .slider__thumb {
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 .slider__image {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -119,7 +136,7 @@ h1, h2, h3 {
   top: 0;
   left: 0;
   z-index: 1;
-  background-color: rgba(25, 28, 38, 0.6);
+  background-color: rgba(25, 28, 38, 0.7);
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -153,6 +170,10 @@ h1, h2, h3 {
   font-weight: 600;
   letter-spacing: 0.01em;
   text-transform: uppercase;
+}
+
+.about {
+  scroll-margin-top: -80px;
 }
 
 .about__list {
@@ -197,23 +218,23 @@ h1, h2, h3 {
       -ms-flex-pack: center;
           justify-content: center;
   gap: 15px;
-  color: white;
+  color: #ffffff;
 }
 .about__item:nth-child(1) {
-  background-color: #1028C9;
+  background-color: #80ccff;
 }
 .about__item:nth-child(2) {
-  background-color: #0E23B0;
+  background-color: #66c2ff;
 }
 .about__item:nth-child(3) {
-  background-color: #0C1E97;
+  background-color: #4db8ff;
 }
 .about__item:nth-child(4) {
-  background-color: #0A197E;
+  background-color: #33adff;
 }
 .about__item:hover, .about__item:focus {
   color: black;
-  background-color: #EFF1FF;
+  background-color: #e6f5ff;
   -webkit-transform: translateY(-60px);
           transform: translateY(-60px);
 }
@@ -248,7 +269,7 @@ h1, h2, h3 {
   display: block;
   width: 50px;
   height: 5px;
-  background-color: #1028C9;
+  background-color: #33adff;
 }
 
 .about__paragraph {
@@ -259,6 +280,7 @@ h1, h2, h3 {
 
 .services {
   background-color: #EFF1FF;
+  scroll-margin-top: 80px;
 }
 
 .services__title {
@@ -282,8 +304,8 @@ h1, h2, h3 {
 }
 
 .specialist {
-  background-color: #1028C9;
-  color: white;
+  background-color: #006bb3;
+  color: #ffffff;
 }
 
 .specialist__section {
@@ -326,15 +348,15 @@ h1, h2, h3 {
   width: 300px;
   height: 70px;
   background-color: transparent;
-  border: 4px solid white;
+  border: 4px solid #ffffff;
   font-size: 24px;
-  color: white;
+  color: #ffffff;
   font-weight: 800;
   text-transform: uppercase;
 }
 .specialist__button:hover, .specialist__button:focus {
-  background-color: white;
-  color: #1028C9;
+  background-color: #ffffff;
+  color: #006bb3;
 }
 
 .portfolio__title {
@@ -358,7 +380,7 @@ h1, h2, h3 {
 }
 
 .contact {
-  background-color: #EFF1FF;
+  background-color: #e6f5ff;
 }
 
 .contact__title {
@@ -382,8 +404,8 @@ h1, h2, h3 {
 }
 
 .footer {
-  background-color: #1028C9;
-  color: white;
+  background-color: #006bb3;
+  color: #ffffff;
 }
 
 .footer__section {
