--- a/sass/components/_commons.scss
+++ b/sass/components/_commons.scss
@@ -1,3 +1,5 @@
+@use './../utils' as *;
+
 *{
     margin: 0;
     padding: 0;
@@ -28,6 +30,10 @@ h1,h2,h3{
 
 .is-hidden{
     display: none;
+}
+
+.fadeout{
+    transform: translateX(-100%);
 }
 
 .container{
