--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,3 +1,5 @@
+@use './../utils' as *;
+
 .navigation__list{
     height: 100%;
     display: flex;
@@ -15,6 +17,6 @@
 
     &:hover,
     &:focus{
-        color: #283FFC;
+        color: #33adff;
     }
 }
