--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,3 +1,5 @@
+@use './../utils' as *;
+
 .slider{
     height: 520px;
     background-color:#283FFC;
@@ -7,9 +9,13 @@
 .slider__thumb{
     width: 100%;
     height: 100%;
+    position: relative;
 }
 
 .slider__image{
+    position: absolute;
+    top:0;
+    left:0;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -20,7 +26,7 @@
     top:0;
     left: 0;
     z-index: 1;
-    background-color: rgba(25, 28, 38, 0.6);
+    background-color: rgba(25, 28, 38, 0.7);
     width: 100%;
     height: 100%;
     display: flex;
