--- a/sass/utils/_colors.scss
+++ b/sass/utils/_colors.scss
@@ -1,4 +1,5 @@
 $colors: (
+    "main-color":#001f33,
     "accent-color": #33adff,
     "light-color": #ffffff,
     "dark-background-color":#006bb3,
