--- a/css/main.css
+++ b/css/main.css
@@ -3,14 +3,20 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
   background-color: #FBFBFB;
-  color: black;
+  color: #001f33;
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
   font-weight: 400;
+  overflow-x: hidden;
+}
+
+img {
+  display: block;
 }
 
 ul {
@@ -31,9 +37,18 @@ h1, h2, h3 {
   display: none;
 }
 
+.invisible {
+  opacity: 0;
+}
+
 .fadeout {
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
+}
+
+.fadein {
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
 }
 
 .container {
@@ -129,13 +144,17 @@ h1, h2, h3 {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  -webkit-transition: -webkit-transform 1s ease-in-out;
+  transition: -webkit-transform 1s ease-in-out;
+  transition: transform 1s ease-in-out;
+  transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
 }
 
 .slider__text-wrapper {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
   background-color: rgba(25, 28, 38, 0.7);
   width: 100%;
   height: 100%;
@@ -203,7 +222,7 @@ h1, h2, h3 {
   height: 200px;
   -webkit-transform: translateY(-50px);
           transform: translateY(-50px);
-  z-index: 2;
+  z-index: 3;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -217,6 +236,10 @@ h1, h2, h3 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-transition: background-color 500ms linear, -webkit-transform 500ms linear;
+  transition: background-color 500ms linear, -webkit-transform 500ms linear;
+  transition: transform 500ms linear, background-color 500ms linear;
+  transition: transform 500ms linear, background-color 500ms linear, -webkit-transform 500ms linear;
   gap: 15px;
   color: #ffffff;
 }
@@ -233,7 +256,7 @@ h1, h2, h3 {
   background-color: #33adff;
 }
 .about__item:hover, .about__item:focus {
-  color: black;
+  color: #001f33;
   background-color: #e6f5ff;
   -webkit-transform: translateY(-60px);
           transform: translateY(-60px);
@@ -272,14 +295,61 @@ h1, h2, h3 {
   background-color: #33adff;
 }
 
+.about__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 30px;
+     -moz-column-gap: 30px;
+          column-gap: 30px;
+}
+
 .about__paragraph {
+  -ms-flex-preferred-size: calc((100% - 30px) / 2);
+      flex-basis: calc((100% - 30px) / 2);
   font-size: 14px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 15px;
+}
+
+.about__span {
+  font-weight: 600;
+  border: 1px solid #001f33;
+  padding: 10px;
+}
+
+.about__thumb {
+  -ms-flex-preferred-size: calc((100% - 30px) / 2);
+      flex-basis: calc((100% - 30px) / 2);
+  width: 100%;
+  height: 300px;
+}
+
+.about__image {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+  outline: 1px solid #ffffff;
+  outline-offset: -8px;
 }
 
 .services {
-  background-color: #EFF1FF;
+  background-color: #e6f5ff;
   scroll-margin-top: 80px;
 }
 
@@ -300,7 +370,7 @@ h1, h2, h3 {
   display: block;
   width: 50px;
   height: 5px;
-  background-color: #1028C9;
+  background-color: #33adff;
 }
 
 .specialist {
