--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -23,11 +23,13 @@
     flex-basis: calc((100% - 45px)/4);
     height: 200px;
     transform: translateY(-50px);
-    z-index: 2;
+    z-index: 3;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition: transform 500ms linear,
+                background-color 500ms linear;
     gap: 15px;
     color: getColor("light-color");
   
@@ -45,12 +47,12 @@
     }
 
     &:nth-child(4){
-        background-color: #33adff;
+        background-color: getColor("accent-color");
     }
 
     &:hover,
     &:focus{
-       color: black;
+       color: getColor("main-color");
        background-color: getColor("light-background-color");
        transform: translateY(-60px);
     }
@@ -89,9 +91,39 @@
     }
 }
 
+.about__wrapper {
+    display: flex;
+    column-gap: 30px;
+}
+
 .about__paragraph{
+    flex-basis: calc((100% - 30px) / 2);
     font-size: 14px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;   
 }
 
+.about__span{
+    font-weight: 600;
+    border: 1px solid getColor("main-color");
+    padding: 10px;
+}
+
+.about__thumb{
+    flex-basis: calc((100% - 30px) / 2);
+    width: 100%;
+    height: 300px
+}
+
+.about__image{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    outline: 1px solid getColor("light-color");
+    outline-offset: -8px;  
+}
