--- a/sass/components/_commons.scss
+++ b/sass/components/_commons.scss
@@ -4,14 +4,20 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body{
     background-color:#FBFBFB;
-    color: black;
+    color: getColor("main-color");
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     font-weight: 400;
+    overflow-x: hidden;
+}
+
+img{
+    display: block;
 }
 
 ul{
@@ -32,9 +38,18 @@ h1,h2,h3{
     display: none;
 }
 
+.invisible{
+    opacity: 0;
+}
+
 .fadeout{
     transform: translateX(-100%);
 }
+
+.fadein {
+    transform: translateX(100%);
+}
+
 
 .container{
     max-width: 1200px;
