--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -19,13 +19,14 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: transform 1s ease-in-out;
 }
 
 .slider__text-wrapper{
     position: absolute;
     top:0;
     left: 0;
-    z-index: 1;
+    z-index: 2;
     background-color: rgba(25, 28, 38, 0.7);
     width: 100%;
     height: 100%;
