--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -2,10 +2,16 @@
 
 .navigation__list{
     height: 100%;
-    display: flex;
     gap: 15px;
     align-items: center;
     justify-content: center;
+    display: none;
+}
+
+@media screen and (min-width: 768px) {
+    .navigation__list{
+        display: flex
+    }
 }
 
 .navigation__link{
