--- a/sass/components/_specialist.scss
+++ b/sass/components/_specialist.scss
@@ -3,6 +3,7 @@
 .specialist{
     background-color: getColor("dark-background-color");
     color: getColor("light-color");
+    display: none;
 }
 
 .specialist__section{
