--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,6 +2,7 @@
 
 .header{
     width: 100%;
+    height: auto;
     padding: 15px 30px;
     position: absolute;
     background-color: transparent;
@@ -11,13 +12,47 @@
     transition: background-color 500ms linear;
 }
 
-.header--sticky{
-    position: fixed;
-    background-color: getColor("dark-background-color");
+@media screen and (min-width: 768px) {
+    .header--sticky {
+        position: fixed;
+        background-color: getColor("dark-background-color");
+    }
 }
 
 .header__container{
     display: flex;
-    justify-content: space-between;
+    flex-direction: column-reverse;
 }
+
+@media screen and (min-width: 768px) {
+    .header__container {
+    justify-content: space-between;
+    flex-direction: row;
+    }
+}
+
+.header__menu-btn{
+    background-color: transparent;
+    border: none;
+    color: getColor("light-color");
+    margin-bottom: 30px;
+
+    &:hover{
+        color: getColor("accent-color");
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .header__menu-btn{
+        display: none;
+    }
+}
+
+.header__icon{
+    fill: currentColor;
+    width: 40px;
+    height: 40px;
+}
+
+
 
