--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -4,6 +4,7 @@
     height: 520px;
     background-color:#283FFC;
     position: relative;
+    overflow: hidden;
 }
 
 .slider__thumb{
@@ -39,16 +40,22 @@
 
 .slider__title{
     color: white;
-    font-size: 64px;
+    font-size: 48px;
     font-weight: 800;
     letter-spacing: 0.01em;
     text-transform: uppercase;
     border-bottom: 1px solid white;   
 }
 
+@media screen and (min-width: 768px) {
+    .slider__title {
+        font-size: 64px;
+    }
+}
+
 .slider__dynamic-span{
     color: white;
-    font-size: 32px;
+    font-size: 24px;
     font-weight: 600;
     letter-spacing: 0.01em;
     text-transform: uppercase;
