--- a/css/main.css
+++ b/css/main.css
@@ -429,25 +429,37 @@ h1, h2, h3 {
 }
 
 .services {
-  background-color: #e6f5ff;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.7)), to(rgba(25, 28, 38, 0.7))), url("./../../images/services.jpg");
+  background: linear-gradient(to bottom, rgba(25, 28, 38, 0.7), rgba(25, 28, 38, 0.7)), url("./../../images/services.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   scroll-margin-top: 80px;
 }
 
-.services__outline-wrapper {
-  outline: 4px solid #33adff;
-  outline-offset: -40px;
-  padding: 0 15px 60px 15px;
+.services__section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .services__title {
+  color: #ffffff;
   font-size: 36px;
   line-height: 2;
   font-weight: 600;
   margin-bottom: 45px;
   position: relative;
-  background-color: #e6f5ff;
-  max-width: 300px;
-  margin: auto;
 }
 .services__title::after {
   content: "";
@@ -466,23 +478,33 @@ h1, h2, h3 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 10px;
-  padding: 15px;
+  gap: 15px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  max-width: 320px;
+  padding-bottom: 30px;
 }
 
+@media screen and (min-width: 768px) {
+  .services__list {
+    gap: 30px;
+    max-width: 800px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .services__list {
+    max-width: 1200px;
+  }
+}
 .services__item {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
   padding: 15px;
   height: 80px;
-  width: 80%;
-  max-width: 500px;
-  background-color: #33adff;
+  background-color: #ffffff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -493,26 +515,49 @@ h1, h2, h3 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  color: #ffffff;
   font-size: 18px;
-  text-transform: uppercase;
   font-weight: 600;
-  -webkit-transition: background-color 500ms linear, -webkit-transform 500ms linear;
-  transition: background-color 500ms linear, -webkit-transform 500ms linear;
-  transition: transform 500ms linear, background-color 500ms linear;
-  transition: transform 500ms linear, background-color 500ms linear, -webkit-transform 500ms linear;
+  overflow: hidden;
+  outline: 10px solid currentColor;
+  outline-offset: -10px;
+  -webkit-transition: outline-offset 200ms linear;
+  transition: outline-offset 200ms linear;
 }
-.services__item:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-  background-color: #ffffff;
+.services__item:hover, .services__item:focus {
+  outline-offset: -20px;
+}
+.services__item:nth-child(1) {
+  color: #80ccff;
+}
+.services__item:nth-child(2) {
+  color: #66c2ff;
+}
+.services__item:nth-child(3) {
+  color: #4db8ff;
+}
+.services__item:nth-child(4) {
   color: #33adff;
 }
 
-.services__icon {
-  fill: currentColor;
-  width: 30px;
-  height: 30px;
+@media screen and (min-width: 768px) {
+  .services__item {
+    height: 100px;
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
+  }
+  .services__item:nth-child(2n) {
+    -webkit-transform: translateY(30px);
+            transform: translateY(30px);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .services__item {
+    height: 120px;
+  }
+}
+.services__text {
+  text-align: center;
+  color: #001f33;
 }
 
 .specialist {
@@ -572,6 +617,10 @@ h1, h2, h3 {
   color: #006bb3;
 }
 
+.portfolio {
+  scroll-margin: 0px;
+}
+
 .portfolio__title {
   font-size: 36px;
   line-height: 2;
@@ -589,14 +638,20 @@ h1, h2, h3 {
   display: block;
   width: 50px;
   height: 5px;
-  background-color: #1028C9;
+  background-color: #33adff;
 }
 
 .contact {
-  background-color: #e6f5ff;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.7)), to(rgba(25, 28, 38, 0.7))), url("./../../images/contact.jpg");
+  background: linear-gradient(to bottom, rgba(25, 28, 38, 0.7), rgba(25, 28, 38, 0.7)), url("./../../images/contact.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  scroll-margin-top: 80px;
 }
 
 .contact__title {
+  color: #ffffff;
   font-size: 36px;
   line-height: 2;
   font-weight: 600;
@@ -613,7 +668,7 @@ h1, h2, h3 {
   display: block;
   width: 50px;
   height: 5px;
-  background-color: #1028C9;
+  background-color: #33adff;
 }
 
 .footer {
