--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -47,15 +47,15 @@
   
 
     &:nth-child(1){
-        background-color: #80ccff;
+        background-color: getColor("first-child-color");
     }
     
     &:nth-child(2){
-        background-color: #66c2ff;
+        background-color: getColor("second-child-color");
     }
 
     &:nth-child(3){
-        background-color: #4db8ff;
+        background-color: getColor("third-child-color");
     }
 
     &:nth-child(4){
