--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -1,10 +1,16 @@
 @use './../utils' as *;
 
 .contact{
-    background-color: getColor("light-background-color");
+    background: linear-gradient(to bottom, getColor("dark-transparent-color"), getColor("dark-transparent-color")),
+            url('./../../images/contact.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    scroll-margin-top: 80px;
 }
 
 .contact__title {
+    color: getColor("light-color");
     font-size: 36px;
     line-height: 2;
     font-weight: 600;
@@ -20,6 +26,6 @@
         display: block;
         width: 50px;
         height: 5px;
-        background-color: #1028C9;
+        background-color: getColor("accent-color");
     }
 }
