--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -28,7 +28,7 @@
     top:0;
     left: 0;
     z-index: 2;
-    background-color: rgba(25, 28, 38, 0.7);
+    background-color: getColor("dark-transparent-color");
     width: 100%;
     height: 100%;
     display: flex;
