--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -9,6 +9,13 @@
     scroll-margin-top: 80px;
 }
 
+.contact__section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
 .contact__title {
     color: getColor("light-color");
     font-size: 36px;
@@ -27,5 +34,80 @@
         width: 50px;
         height: 5px;
         background-color: getColor("accent-color");
+    }
+}
+
+.contact__form{
+    background-color: getColor("light-color");
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px 40px 40px 40px;
+    gap: 15px;
+    outline: 10px solid getColor("accent-color") ;
+    outline-offset: -10px;
+    transition: outline-offset 200ms linear;
+    width: 100%;
+    max-width: 450px;
+    &:focus,
+    &:hover{
+        outline-offset: -20px;
+    }
+}
+
+.contact__input{
+    width: 100%;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid;
+    padding: 10px;
+
+    &:focus{
+        color: getColor("accent-color");
+    }
+
+    &::placeholder{
+        text-transform: uppercase;
+      
+    }
+}
+
+.contact__textarea{
+    width: 100%;
+    border: none;
+    outline: none;
+    resize: none;
+    height: 120px;
+    border-bottom: 1px solid;
+    padding: 10px;
+    margin-bottom: 20px;
+
+    &:focus {
+            color: getColor("accent-color");
+    }
+
+    &::placeholder {
+        text-transform: uppercase; 
+     
+    }
+}
+
+.contact__button{
+    width: 200px;
+    height: 60px;
+    color: getColor("accent-color");
+    background: transparent;
+    border: 5px solid getColor("accent-color");
+    cursor: pointer;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 600;
+    transition: background-color 200ms linear;
+
+
+    &:hover,
+    &:focus{
+        background-color: getColor("accent-color");
+        color: getColor("light-color");
     }
 }
