--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -68,8 +68,10 @@
     gap: 10px;
     align-items: center;
     justify-content: center;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 0.01em;
     overflow: hidden;
     outline: 10px solid currentColor;
     outline-offset: -10px;
