--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -2,7 +2,7 @@
 
 .services{
     background: linear-gradient(to bottom, getColor("dark-transparent-color"), getColor("dark-transparent-color")),
-        url('./../../images/services.jpg');
+        url('./../images/services.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
