--- a/css/main.css
+++ b/css/main.css
@@ -429,8 +429,8 @@ h1, h2, h3 {
 }
 
 .services {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.7)), to(rgba(25, 28, 38, 0.7))), url("./../../images/services.jpg");
-  background: linear-gradient(to bottom, rgba(25, 28, 38, 0.7), rgba(25, 28, 38, 0.7)), url("./../../images/services.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.7)), to(rgba(25, 28, 38, 0.7))), url("./../images/services.jpg");
+  background: linear-gradient(to bottom, rgba(25, 28, 38, 0.7), rgba(25, 28, 38, 0.7)), url("./../images/services.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -644,8 +644,8 @@ h1, h2, h3 {
 }
 
 .contact {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.7)), to(rgba(25, 28, 38, 0.7))), url("./../../images/contact.jpg");
-  background: linear-gradient(to bottom, rgba(25, 28, 38, 0.7), rgba(25, 28, 38, 0.7)), url("./../../images/contact.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.7)), to(rgba(25, 28, 38, 0.7))), url("./../images/contact.jpg");
+  background: linear-gradient(to bottom, rgba(25, 28, 38, 0.7), rgba(25, 28, 38, 0.7)), url("./../images/contact.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -769,9 +769,9 @@ h1, h2, h3 {
 .contact__button {
   width: 200px;
   height: 60px;
-  color: #33adff;
-  background: transparent;
-  border: 5px solid #33adff;
+  color: #ffffff;
+  background: #33adff;
+  border: none;
   cursor: pointer;
   text-transform: uppercase;
   font-size: 16px;
@@ -780,8 +780,7 @@ h1, h2, h3 {
   transition: background-color 200ms linear;
 }
 .contact__button:hover, .contact__button:focus {
-  background-color: #33adff;
-  color: #ffffff;
+  background-color: #80ccff;
 }
 
 .footer {
