--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -2,7 +2,7 @@
 
 .contact{
     background: linear-gradient(to bottom, getColor("dark-transparent-color"), getColor("dark-transparent-color")),
-            url('./../../images/contact.jpg');
+            url('./../images/contact.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -95,9 +95,9 @@
 .contact__button{
     width: 200px;
     height: 60px;
-    color: getColor("accent-color");
-    background: transparent;
-    border: 5px solid getColor("accent-color");
+    color: getColor("light-color");
+    background: getColor("accent-color");
+    border: none;
     cursor: pointer;
     text-transform: uppercase;
     font-size: 16px;
@@ -107,7 +107,6 @@
 
     &:hover,
     &:focus{
-        background-color: getColor("accent-color");
-        color: getColor("light-color");
+        background-color: getColor("first-child-color");
     }
 }
