--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @use './components/header';
 @use './components/logo';
 @use './components/navigation';
+@use './components/menu';
 @use './components/slider';
 @use './components/about';
 @use './components/services';
