--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -27,7 +27,7 @@
 
 @media screen and (min-width: 768px) {
     .about__section {
-        padding: 0px 30px 50px 30px;
+        padding: 0px 30px 70px 30px;
     }
 }
 
@@ -42,6 +42,8 @@
     justify-content: center;
     transition: transform 500ms linear,
                 background-color 500ms linear;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+            0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
     gap: 15px;
     color: getColor("light-color");
   
@@ -124,12 +126,16 @@
     font-weight: 600;
     border: 1px solid getColor("main-color");
     padding: 10px;
+    
+    
 }
 
 .about__thumb{
     flex-basis: calc((100% - 30px) / 2);
     width: 100%;
-    height: 300px
+    height: 300px;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+            0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
 
 .about__image{
