--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -1,23 +1,29 @@
 @use './../utils' as *;
 
 .services{
-    background: linear-gradient(to bottom, getColor("dark-transparent-color"), getColor("dark-transparent-color")),
-        url('./../images/services.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    scroll-margin-top: 80px;
+    scroll-margin-top: 100px;
 }  
+
+.services__container{
+    outline: 5px solid getColor("accent-color");
+    outline-offset: -15px;
+    transition: outline-offset 200ms linear;
+    width: 100%;
+
+    &:focus,
+    &:hover {
+        outline-offset: -25px;
+    }
+}
 
 .services__section{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: center;  
 }
 
 .services__title {
-    color: getColor("light-color");
     font-size: 36px;
     line-height: 2;
     font-weight: 600;
@@ -43,83 +49,91 @@
     gap: 15px;
     flex-wrap: wrap;
     max-width: 320px;
-    padding-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) {
     .services__list{
         gap: 30px;
         max-width: 800px;
-    }
-}
-
-@media screen and (min-width: 1200px) {
-    .services__list {
-        max-width: 1200px;
+        padding-bottom: 30px;
     }
 }
 
 .services__item{
+    position: relative;
     flex-basis: 100%;
     padding: 15px;
-    height: 80px;
+    height: 60px;
+    color: getColor("main-color");
     background-color: getColor("light-color");
     display: flex;
     gap: 10px;
     align-items: center;
-    justify-content: center;
-    font-size: 16px;
+    justify-content: flex-start;
+    padding-left: 75px;
+    font-size: 18px;
     font-weight: 600;
-    text-transform: uppercase;
     letter-spacing: 0.01em;
     overflow: hidden;
-    outline: 10px solid currentColor;
-    outline-offset: -10px;
-    transition: outline-offset 200ms linear ;
+    transition: color 500ms linear,
+                background-color 500ms linear;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+            0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 
     &:hover,
     &:focus{
-        outline-offset: -20px;
+        background-color: getColor("accent-color");
+        color: getColor("light-color");
+
+    &:hover .services__icon,
+    &:focus .services__icon{
+        width: 50px;
+        height: 50px;
+        transition: width 500ms linear,
     }
 
-    &:nth-child(1){
-        color: getColor("first-child-color");
-    }
 
-    &:nth-child(2) {
-        color: getColor("second-child-color");
-        
     }
-
-    &:nth-child(3) {
-        color: getColor("third-child-color");
-    }
-
-    &:nth-child(4) {
-        color: getColor("accent-color");
-       
-    }
-
 }
 
 @media screen and (min-width: 768px) {
-    .services__item{
-        height: 100px;
-        flex-basis:calc((100% - 30px) / 2);
+    .services__item {
+        flex-basis: calc((100% - 30px) / 2);
 
         &:nth-child(2n){
-            transform: translateY(30px);
+            transform: translateY(30px);   
         }
     }
 }
 
-@media screen and (min-width: 1200px) {
-    .services__item {
-        height: 120px;
-    }
+.services__icon-holder{
+    position: absolute;
+    top:0;
+    left: 0;
+    color: getColor("light-color");
+    background-color: getColor("accent-color");
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.services__icon{
+    fill: currentColor;
+    width: 40px;
+    height: 40px;
+    transition: width 500ms linear,
 }
 
 .services__text{
-    text-align: center;
-    color: getColor("main-color");
+    text-align: left;
 }
+
+
+
+// @keyframes service-background {
+//     0%{background-color: getColor("first-child-color")}
+//     50% {background-color: getColor("second-child-color")}
+//     100% { background-color: getColor("first-child-color")}
+// }
