--- a/css/main.css
+++ b/css/main.css
@@ -149,6 +149,15 @@ h1, h2, h3 {
     height: 60px;
   }
 }
+.logo__icon-bottom {
+  width: 60px;
+  height: 60px;
+  fill: white;
+}
+.logo__icon-bottom:hover, .logo__icon-bottom:focus {
+  fill: #33adff;
+}
+
 .navigation__list {
   height: 100%;
   gap: 15px;
@@ -971,7 +980,7 @@ h1, h2, h3 {
   font-weight: 600;
   letter-spacing: 0.02em;
   text-transform: uppercase;
-  padding: 15px;
+  padding: 30px;
 }
 
 .footer__text {
