--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -1,8 +1,12 @@
 @use './../utils' as *;
 
-.about{
-    scroll-margin-top: -80px;
+
+@media screen and (min-width: 768px) {
+    .about {
+        scroll-margin-top: -90px;
+    }
 }
+
 
 .about__list{
     width: 100%;
