--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -1,8 +1,10 @@
 @use './../utils' as *;
 
-.services{
-    scroll-margin-top: 100px;
-}  
+@media screen and (min-width: 768px) {
+    .services {
+        scroll-margin-top: 100px;
+    }
+}
 
 .services__container{
     outline: 5px solid getColor("accent-color");
