--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,7 @@
 @use './components/slider';
 @use './components/about';
 @use './components/services';
-@use './components/specialist';
 @use './components/portfolio';
 @use './components/contact';
 @use './components/footer';
+@use './components/phone-mail'
