--- a/css/main.css
+++ b/css/main.css
@@ -350,6 +350,19 @@ h1, h2, h3 {
     font-size: 32px;
   }
 }
+.slider__contact-wrapper {
+  width: 100%;
+  color: #ffffff;
+  position: absolute;
+  bottom: 20px;
+  z-index: 3;
+}
+
+@media screen and (min-width: 768px) {
+  .slider__contact-wrapper {
+    bottom: 70px;
+  }
+}
 @media screen and (min-width: 768px) {
   .about {
     scroll-margin-top: -90px;
@@ -429,7 +442,7 @@ h1, h2, h3 {
 }
 .about__item:hover, .about__item:focus {
   color: #001f33;
-  background-color: #e6f5ff;
+  background-color: #ffffff;
   -webkit-transform: translateY(-60px);
           transform: translateY(-60px);
 }
@@ -672,70 +685,6 @@ h1, h2, h3 {
 
 .services__text {
   text-align: left;
-}
-
-.specialist {
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.7)), to(rgba(25, 28, 38, 0.7))), url("./../images/services.jpg");
-  background: linear-gradient(to bottom, rgba(25, 28, 38, 0.7), rgba(25, 28, 38, 0.7)), url("./../images/services.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: #ffffff;
-  display: none;
-}
-
-.specialist__section {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  height: 500px;
-}
-
-.specialist__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.specialist__text {
-  width: 100%;
-  text-align: left;
-  font-size: 56px;
-  font-weight: 800;
-  letter-spacing: 0.02em;
-  text-transform: uppercase;
-}
-
-.specialist__button {
-  width: 300px;
-  height: 70px;
-  background-color: transparent;
-  border: 4px solid #ffffff;
-  font-size: 24px;
-  color: #ffffff;
-  font-weight: 800;
-  text-transform: uppercase;
-}
-.specialist__button:hover, .specialist__button:focus {
-  background-color: #ffffff;
-  color: #001f33;
 }
 
 @media screen and (min-width: 768px) {
@@ -988,4 +937,67 @@ h1, h2, h3 {
 
 .footer__text {
   text-align: center;
+}
+
+.phone-mail__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  row-gap: 15px;
+  -webkit-column-gap: 25px;
+     -moz-column-gap: 25px;
+          column-gap: 25px;
+  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+  .phone-mail__list {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+.phone-mail__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: currentColor;
+  width: 100%;
+  overflow: hidden;
+  -webkit-transition: color 200ms linear;
+  transition: color 200ms linear;
+}
+.phone-mail__link:hover, .phone-mail__linkfocus {
+  color: #33adff;
+}
+
+.phone-mail__icon {
+  fill: currentColor;
+  width: 25px;
+  height: 25px;
+}
+
+.phone-mail__text {
+  width: 100%;
+  display: block;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: 0.01rem;
+  word-wrap: break-word;
 }/*# sourceMappingURL=main.css.map */
